feat: whisper.cpp を JVM 内から呼ぶ transcribe-cpp / transcribe-cpp-all を追加
外部バイナリ whisper-cli を使う既存の engine=cpp とは別経路で、jp.clip:whisper-ffm 2.0.1 を FFM(Panama) 経由で JVM 内から呼ぶ。Windows は jar 同梱のネイティブで追加インストール不要。設定は transcribe.whisper.cpp.* と区別するため transcribe.ffm.* に分けた。

既存コードへの変更は 2 点のみ。FfmpegService に PartFormat を明示できるオーバーロードを追加（3 引数版は挙動不変。FFM は WAV しか読めないため WAV を指定して呼ぶ）。TranscribeAllCommand の listTargets を Mp3FileFinder へ切り出し、transcribe-cpp-all と共用（重複実装を作らないため）。

既定値はライブラリ（= whisper.cpp）と意図的に違える。vad=false / best-of=-1 / temperature-increment=0.4 / beam-size=2 / suppress-non-speech-tokens=true はいずれも実測に基づく。初期プロンプトは参加者名が入るためリポジトリに置かず ~/whisper-prompt.txt を既定とし、サンプルのみ docs/whisper-prompt.sample.txt に置いた。